<resources>
    <string name="app_name">CoolWeather</string>
    <string name="city_name">City name</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="temp_22">22</string>
    <string name="condition">Condition</string>
    <string name="weather_forecast_title">Today\'s Weather forecast</string>
    <string name="default_city">City</string>
    <string name="temp_13">13</string>
    <string name="temp_20">20</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>