<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="myViewModel"
            type="com.lawrence.coolweatherapplication.viewModel.MainViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ProgressBar
            android:id="@+id/idPBLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible" />

        <RelativeLayout
            android:id="@+id/idRLHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <ImageView
                android:id="@+id/idIVBack"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@color/black_shade_1" />

            <TextView
                android:id="@+id/idTVCityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin_large"
                android:gravity="center"
                android:padding="@dimen/padding_large"
                android:text="@string/city_name"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium" />

            <LinearLayout
                android:id="@+id/idLLEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idTVCityName"
                android:orientation="horizontal"
                android:weightSum="5">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/idTILCity"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_bottom_margin"
                    android:layout_weight="4.5"
                    android:background="@android:color/transparent"
                    android:hint="@string/enter_city_name"
                    android:textSize="@dimen/text_size_third"
                    android:padding="@dimen/small_padding"
                    android:textColorHint="@color/white"
                    app:hintTextColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/idEdtCity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:importantForAutofill="no"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_small" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/idIVSearch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/text_bottom_margin"
                    android:layout_weight="0.5"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_search"
                    app:tint="@color/white" />

            </LinearLayout>

            <TextView
                android:id="@+id/idTVTemperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idLLEdt"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"
                android:padding="@dimen/small_padding"
                android:text="@string/temp_22"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large" />

            <ImageView
                android:id="@+id/idIVIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/idTVTemperature"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/text_bottom_margin"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/idTVCondition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idIVIcon"
                android:layout_margin="@dimen/text_bottom_margin"
                android:gravity="center"
                android:text="@string/condition"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/idRvWeather"
                android:layout_margin="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/text_bottom_margin"
                android:gravity="center"
                android:text="@string/weather_forecast_title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/idRvWeather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </RelativeLayout>

    </RelativeLayout>
</layout>